# my_project

./: .gitignore  CLAUDE.md  CMakeLists.txt  communication-diagram.html
.claude/: settings.local.json
.github/workflows/: ci.yml
build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  my_project  test_runner
build-rel/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  my_project  test_runner
docs/bugs/: INDEX.md
docs/requirements/: INDEX.md  REQ-000-template.md
docs/templates/: bug-report-template.md  design-template.md  requirements-template.md
scripts/: check-all-sanitizers.sh
src/: util.c
tests/: test_main.c
